revert back to one balloon and fix positioning on mobile

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -125,11 +125,6 @@
   animation: float 6s ease-in-out infinite;
 }
 
-.blue-balloon {
-  animation-delay: 1s;
-  animation: float 8s ease-in-out infinite;
-}
-
 @keyframes float {
   0% {
     transform: translatey(0px);
